// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dark theme Text should match snapshot 1`] = `
<Text
  style={
    {
      "color": "rgb(255, 255, 255)",
    }
  }
>
  Hello there
</Text>
`;

exports[`dark theme TextInput should match snapshot 1`] = `
<TextInput
  style={
    {
      "backgroundColor": "rgba(255,255,255, .1)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "color": "rgb(255, 255, 255)",
    }
  }
  value="Check, check. Is this thing on?"
/>
`;

exports[`dark theme View should match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(255, 255, 255, .07)",
    }
  }
>
  <Text
    style={
      {
        "color": "rgb(255, 255, 255)",
      }
    }
  >
    Hello there
  </Text>
</View>
`;

exports[`light theme Text should match snapshot 1`] = `
<Text
  style={
    {
      "color": "#111",
    }
  }
>
  Hello there
</Text>
`;

exports[`light theme TextInput should match snapshot 1`] = `
<TextInput
  style={
    {
      "backgroundColor": "rgba(0, 0, 0, .07)",
      "borderBottomLeftRadius": 4,
      "borderBottomRightRadius": 4,
      "borderTopLeftRadius": 4,
      "borderTopRightRadius": 4,
      "color": "#111",
    }
  }
  value="Check, check. Is this thing on?"
/>
`;

exports[`light theme View should match snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(0, 0, 0, .05)",
    }
  }
>
  <Text
    style={
      {
        "color": "#111",
      }
    }
  >
    Hello there
  </Text>
</View>
`;
